<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context="com.example.atriox.guia7_moviles.PrincipalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/IdCat"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:text="@string/text_catID"
                android:textSize="25sp"
                android:textAlignment="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/Categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_catHint"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BtnGuardar"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/text_btnG"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorFondo"
                android:textSize="17sp"
                android:layout_alignParentLeft="true"/>

            <Button
                android:id="@+id/BtnAcceder"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/text_btnA"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorFondo"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/BtnEliminar"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/text_btnE"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorFondo"
                android:textSize="17sp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/LstCategorias"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
