<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TxtIdPro"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:text="@string/text_catID"
            android:textSize="32sp"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TxtNomPro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_proHint"
                android:textSize="25sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/TxtDesPro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_proDes"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
